--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,15 @@ Description: Load data from public hire bicycle systems.
 Depends:
     R (>= 3.3.0)
 License: GPL-3 + file LICENSE
+SystemRequirements: C++11
+NeedsCompilation: yes
 Encoding: UTF-8
 LazyData: true
+Imports:
+    Rcpp
 Suggests:
     testthat
+LinkingTo: 
+    BH,
+    Rcpp
 RoxygenNote: 5.0.1
