--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,13 @@
 export(dl_bikedata)
 export(store_bikedata)
 export(store_bikedata_spl)
+export(tripmat)
 importFrom(Rcpp,evalCpp)
+importFrom(dplyr,group_by)
+importFrom(dplyr,src_sqlite)
+importFrom(dplyr,summarise)
+importFrom(methods,as)
+importFrom(stats,xtabs)
 importFrom(utils,download.file)
 importFrom(utils,unzip)
 useDynLib(bikedata)
