add new dplyr, lubridate methods to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,15 @@ export(store_bikedata)
 export(store_bikedata_spl)
 export(tripmat)
 importFrom(Rcpp,evalCpp)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,collect)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,sql)
 importFrom(dplyr,src_sqlite)
 importFrom(dplyr,summarise)
+importFrom(dplyr,tbl)
+importFrom(lubridate,ymd)
 importFrom(methods,as)
 importFrom(stats,xtabs)
 importFrom(utils,download.file)
