--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(dl_bikedata)
 export(get_datelimits)
 export(store_bikedata)
 export(tripmat)
+import(RSQLite)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,collect)
