--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dl_bikedata)
 export(get_datelimits)
 export(store_bikedata)
 export(tripmat)
+export(createDBIndexes)
 import(RSQLite)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,"%>%")
