return tripmat in wide format too

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
 importFrom(lubridate,ymd)
 importFrom(methods,as)
+importFrom(reshape2,melt)
 importFrom(stats,xtabs)
 importFrom(utils,download.file)
 importFrom(utils,unzip)
