--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,10 +15,14 @@ importFrom(dplyr,sql)
 importFrom(dplyr,src_sqlite)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
+importFrom(httr,GET)
+importFrom(httr,content)
 importFrom(lubridate,ymd)
 importFrom(methods,as)
 importFrom(reshape2,dcast)
 importFrom(stats,xtabs)
 importFrom(utils,download.file)
 importFrom(utils,unzip)
+importFrom(xml2,xml_children)
+importFrom(xml2,xml_find_all)
 useDynLib(bikedata)
