--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(methods,as)
 importFrom(reshape2,dcast)
 importFrom(stats,xtabs)
 importFrom(utils,download.file)
+importFrom(utils,menu)
 importFrom(utils,unzip)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
