import ch stations in R and pass to rcpp_import_station_df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(reshape2,dcast)
 importFrom(stats,xtabs)
 importFrom(utils,download.file)
 importFrom(utils,menu)
+importFrom(utils,read.csv)
 importFrom(utils,unzip)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
