--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
 importFrom(httr,GET)
 importFrom(httr,content)
+importFrom(lubridate,ddays)
+importFrom(lubridate,interval)
 importFrom(lubridate,ymd)
 importFrom(methods,as)
 importFrom(reshape2,dcast)
