--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,8 @@ init:
         Import-Module '..\appveyor-tool.ps1'
 
 install:
-  ps: Bootstrap
+    - ps: Bootstrap
+    - cinst sqlite
 
 # Adapt as necessary starting from here
 
@@ -18,7 +19,6 @@ environment:
           R_ARCH: x64
 
 build_script:
-    - travis-tool.sh install_github rstats-db/RSQLite
     - travis-tool.sh install_deps
 
 test_script:
