add bike_write_test_data; update all fns to default tempdir()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(bike_daily_trips)
 export(bike_datelimits)
 export(bike_latest_files)
+export(bike_rm_test_data)
 export(bike_stations)
 export(bike_summary_stats)
 export(bike_tripmat)
+export(bike_write_test_data)
 export(dl_bikedata)
 export(store_bikedata)
 import(RSQLite)
@@ -30,6 +32,8 @@ importFrom(utils,download.file)
 importFrom(utils,menu)
 importFrom(utils,read.csv)
 importFrom(utils,unzip)
+importFrom(utils,write.csv)
+importFrom(utils,zip)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
 useDynLib(bikedata)
