fix data import into bike_write_test_data; run examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(lubridate,ymd)
 importFrom(methods,as)
 importFrom(reshape2,dcast)
 importFrom(stats,xtabs)
+importFrom(utils,data)
 importFrom(utils,download.file)
 importFrom(utils,menu)
 importFrom(utils,read.csv)
