fix examples; tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,13 @@ export(bike_tripmat)
 export(bike_write_test_data)
 export(dl_bikedata)
 export(store_bikedata)
-import(RSQLite)
+importFrom(RSQLite,SQLite)
+importFrom(RSQLite,dbBind)
+importFrom(RSQLite,dbClearResult)
+importFrom(RSQLite,dbConnect)
+importFrom(RSQLite,dbDisconnect)
+importFrom(RSQLite,dbGetQuery)
+importFrom(RSQLite,dbSendQuery)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,collect)
