--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(bike_daily_trips)
 export(bike_datelimits)
+export(bike_demographic_data)
 export(bike_latest_files)
 export(bike_rm_db)
 export(bike_rm_test_data)
