update travis.yml (#2)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ cache: packages
 
 addons:
     apt:
-        source:
-            - travis-ci/sqlite3
+        #source:
+        #    - travis-ci/sqlite3
         packages:
             - sqlite3
             - libsqlite3-dev
