update travis.yml (#3)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ cache: packages
 
 addons:
     apt:
-        #source:
-        #    - travis-ci/sqlite3
+        source:
+            - travis-ci/sqlite3
         packages:
-            - sqlite3
+            #- sqlite3
             - libsqlite3-dev
             - libsqlite3-0
 
