update travis.yml (#5)

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache: packages
 before_install:
     - sudo apt-add-repository -y ppa:travis-ci/sqlite3
     - sudo apt-get -y update
-      #- sudo apt-get -y install sqlite3=3.7.15.1-1~travis1
+    - sudo apt-get -y install sqlite3=3.7.15.1-1~travis1 
 
 addons:
     apt:
