--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,8 @@ LinkingTo:
 VignetteBuilder: knitr
 SystemRequirements: C++11
 NeedsCompilation: yes
+URL: https://github.com/mpadge/bikedata
+BugReports: https://github.com/mpadge/bikedata/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
