--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: bikedata
-Title: Load data from public hire bicycle systems
+Title: Load Data from Public Hire Bicycle Systems
 Version: 0.0.0
 Authors@R: c(
     person("Mark", "Padgham", email="mark.padgham@email.com", role=c("aut", "cre")),
