--- a/.travis.yml
+++ b/.travis.yml
@@ -35,13 +35,12 @@ notifications:
     on_failure: change
 
 #before_script
-before_script:
-    - R -q -e 'devtools::install_github("ropenscilabs/tic"); tic::prepare_all_stages()'
+#- R -q -e 'devtools::install_github("ropenscilabs/tic"); tic::prepare_all_stages()'
 
 #after_success
 after_success:
-    - R -q -e 'tic::after_success()'
-    #- Rscript -e 'covr::codecov()'
+    - Rscript -e 'covr::codecov()'
+    #- R -q -e 'tic::after_success()'
       #- Rscript -e "source ('https://install-github.me/MangoTheCat/goodpractice')"
       #- Rscript -e 'library(goodpractice);gp(checks=all_checks()[grepl("(rcmdcheck|covr)",all_checks())])'
       #- Rscript -e 'library(goodpractice);gp(checks=all_checks())'
