implement flexible date args for dl_bikedata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ importFrom(reshape2,dcast)
 importFrom(utils,data)
 importFrom(utils,menu)
 importFrom(utils,read.csv)
+importFrom(utils,tail)
+importFrom(utils,type.convert)
 importFrom(utils,unzip)
 importFrom(utils,write.csv)
 importFrom(utils,zip)
