--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ importFrom(lubridate,interval)
 importFrom(lubridate,ymd)
 importFrom(methods,as)
 importFrom(reshape2,dcast)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(utils,data)
 importFrom(utils,menu)
 importFrom(utils,read.csv)
