tools::package_native_routine_registration_skeleton
https://stackoverflow.com/questions/42313373/r-cmd-check-note-found-no-calls-to-r-registerroutines-r-usedynamicsymbols#42339658

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,4 +44,4 @@ importFrom(utils,write.csv)
 importFrom(utils,zip)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
-useDynLib(bikedata)
+useDynLib(bikedata, .registration = TRUE)
