RSQLite -> DBI; closes #43

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,13 +14,13 @@ export(bike_write_test_data)
 export(dl_bikedata)
 export(index_bikedata_db)
 export(store_bikedata)
+importFrom(DBI,dbBind)
+importFrom(DBI,dbClearResult)
+importFrom(DBI,dbConnect)
+importFrom(DBI,dbDisconnect)
+importFrom(DBI,dbGetQuery)
+importFrom(DBI,dbSendQuery)
 importFrom(RSQLite,SQLite)
-importFrom(RSQLite,dbBind)
-importFrom(RSQLite,dbClearResult)
-importFrom(RSQLite,dbConnect)
-importFrom(RSQLite,dbDisconnect)
-importFrom(RSQLite,dbGetQuery)
-importFrom(RSQLite,dbSendQuery)
 importFrom(Rcpp,evalCpp)
 importFrom(httr,GET)
 importFrom(httr,content)
