--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(tibble,tibble)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,data)
 importFrom(utils,menu)
+importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
 importFrom(utils,tail)
 importFrom(utils,type.convert)
