--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ r_github_packages:
 
 #after_success
 after_success:
-    - Rscript -e "covr::codecov(line_exclusions = 'src/vendor/sqlite3/sqlite3.c')"
+    - Rscript -e "covr::codecov(line_exclusions = list('R/distmat.R',",\
+        "'src/vendor/sqlite3/sqlite3.c')"
     #- R -q -e 'tic::after_success()'
       #- Rscript -e "source ('https://install-github.me/MangoTheCat/goodpractice')"
       #- Rscript -e 'library(goodpractice);gp(checks=all_checks()[grepl("(rcmdcheck|covr)",all_checks())])'
