--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(bike_match_matrices)
 export(bike_rm_db)
 export(bike_rm_test_data)
 export(bike_stations)
+export(bike_stored_files)
 export(bike_summary_stats)
 export(bike_tripmat)
 export(bike_write_test_data)
