--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -10,8 +10,12 @@
 ^script\.R$
 ^docs$
 ^data-raw$
+^data\nomenclatura*
 ^paper\.md$
 ^paper\.bib$
 ^\.Rproj\.user$
 ^codemeta\.json$
 ^src/vendor/sqlite3/sqlite3.o$
+^CONDUCT.md$
+^CONTRIBUTING.md$
+^cran-comments.md$
