--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -16,6 +16,6 @@
 ^\.Rproj\.user$
 ^codemeta\.json$
 ^src/vendor/sqlite3/sqlite3.o$
-^CONDUCT.md$
+^CODE_OF_CONDUCT.md$
 ^CONTRIBUTING.md$
 ^cran-comments.md$
