--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,11 @@ Authors@R: c(
         comment = "Authors of included SQLite code"))
 Description: Download and aggregate data from all public hire bicycle systems
     which provide open data, currently including 'Santander' Cycles in London,
-    U.K., and from the U.S.A., 'citibike' in New York City NY, 'Divvy' in
-    Chicago IL, 'Capital Bikeshare' in Washington DC, 'Hubway' in Boston MA, 
-    'Metro' in Los Angeles LA, and 'Indego' in Philadelphia PA.
+    U.K.; from the U.S.A., 'Ford GoBike' in San Francisco CA, 'citibike' in New
+    York City NY, 'Divvy' in Chicago IL, 'Capital Bikeshare' in Washington DC,
+    'Hubway' in Boston MA, 'Metro' in Los Angeles LA, 'Indego' in Philadelphia
+    PA, and 'Nice Ride' in Minnesota; 'Bixi' from Montreal, Canada; and 'mibici'
+    from Guadalajara, Mexico.
 License: GPL-3
 Depends:
     R (>= 3.0)
