--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,46 @@
 Package: bikedata
-Title: Download and Aggregate Data from Public Hire Bicycle Systems
-Version: 0.2.5
-Authors@R: c(
-    person("Mark", "Padgham", email = "mark.padgham@email.com",
-        role = c("aut", "cre"),
-        comment = c(ORCID = "https://orcid.org/0000-0003-2172-5265")),
-    person("Richard", "Ellison", role = "aut"),
-    person("Tom", "Buckley", role = "aut"),
-    person("Ryszard", "Szymański", email = "ryszard.szymanski@outlook.com", role = "ctb"),
-    person("Bea", "Hernández", role = "rev",
-        comment = "Bea reviewed the package for ropensci, see https://github.com/ropensci/onboarding/issues/116"),
-    person("Elaine", "McVey", role = "rev",
-        comment = "Elaine reviewed the package for ropensci, see https://github.com/ropensci/onboarding/issues/116"),
-    person(family = "SQLite Consortium", role = "ctb", 
-        comment = "Authors of included SQLite code"))
-Description: Download and aggregate data from all public hire bicycle systems
-    which provide open data, currently including 'Santander' Cycles in London,
-    U.K.; from the U.S.A., 'Ford GoBike' in San Francisco CA, 'citibike' in New
-    York City NY, 'Divvy' in Chicago IL, 'Capital Bikeshare' in Washington DC,
-    'Hubway' in Boston MA, 'Metro' in Los Angeles LA, 'Indego' in Philadelphia
-    PA, and 'Nice Ride' in Minnesota; 'Bixi' from Montreal, Canada; and 'mibici'
-    from Guadalajara, Mexico.
+Title: Download and Aggregate Data from Public Hire Bicycle
+    Systems
+Version: 0.2.5.001
+Authors@R: 
+    c(person(given = "Mark",
+             family = "Padgham",
+             role = c("aut", "cre"),
+             email = "mark.padgham@email.com",
+             comment = c(ORCID = "https://orcid.org/0000-0003-2172-5265")),
+      person(given = "Richard",
+             family = "Ellison",
+             role = "aut"),
+      person(given = "Tom",
+             family = "Buckley",
+             role = "aut"),
+      person(given = "Ryszard",
+             family = "Szymański",
+             role = "ctb",
+             email = "ryszard.szymanski@outlook.com"),
+      person(given = "Bea",
+             family = "Hernández",
+             role = "rev",
+             comment = "Bea reviewed the package for ropensci, see https://github.com/ropensci/onboarding/issues/116"),
+      person(given = "Elaine",
+             family = "McVey",
+             role = "rev",
+             comment = "Elaine reviewed the package for ropensci, see https://github.com/ropensci/onboarding/issues/116"),
+      person(family = "SQLite Consortium",
+             role = "ctb",
+             comment = "Authors of included SQLite code"))
+Description: Download and aggregate data from all public hire
+    bicycle systems which provide open data, currently including
+    'Santander' Cycles in London, U.K.; from the U.S.A., 'Ford GoBike' in
+    San Francisco CA, 'citibike' in New York City NY, 'Divvy' in Chicago
+    IL, 'Capital Bikeshare' in Washington DC, 'Hubway' in Boston MA,
+    'Metro' in Los Angeles LA, 'Indego' in Philadelphia PA, and 'Nice
+    Ride' in Minnesota; 'Bixi' from Montreal, Canada; and 'mibici' from
+    Guadalajara, Mexico.
 License: GPL-3
+URL: https://docs.ropensci.org/bikedata,
+    https://github.com/ropensci/bikedata
+BugReports: https://github.com/ropensci/bikedata/issues
 Depends:
     R (>= 3.0)
 Imports:
@@ -32,8 +51,8 @@ Imports:
     methods,
     Rcpp,
     readxl,
-    RSQLite,
     reshape2,
+    RSQLite,
     tibble,
     xml2
 Suggests:
@@ -44,14 +63,14 @@ Suggests:
 LinkingTo: 
     BH,
     Rcpp
-VignetteBuilder: knitr
-SystemRequirements: C++11
-NeedsCompilation: yes
-URL: https://docs.ropensci.org/bikedata, https://github.com/ropensci/bikedata
-BugReports: https://github.com/ropensci/bikedata/issues
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 LazyData: true
+NeedsCompilation: yes
 RoxygenNote: 7.0.2
+SystemRequirements: C++11
 X-schema.org-applicationCategory: Data Access
-X-schema.org-keywords: bicycle-hire-systems, bike-hire-systems, bike-hire, bicycle-hire, database, bike-data
 X-schema.org-isPartOf: https://ropensci.org
+X-schema.org-keywords: bicycle-hire-systems, bike-hire-systems,
+    bike-hire, bicycle-hire, database, bike-data
