--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bikedata
 Title: Download and Aggregate Data from Public Hire Bicycle Systems
-Version: 0.2.5.041
+Version: 0.2.5.042
 Authors@R: c(
     person("Mark", "Padgham", , "mark.padgham@email.com", role = c("aut", "cre"),
            comment = c(ORCID = "https://orcid.org/0000-0003-2172-5265")),
@@ -29,6 +29,7 @@ BugReports: https://github.com/ropensci/bikedata/issues
 Depends:
     R (>= 3.0)
 Imports:
+    brio,
     DBI,
     httr,
     lubridate,
